# ICP

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh
.github/workflows/: cmake.yml
00_demo2d/: CMakeLists.txt  icp.cpp  icp.hpp  main.cpp  point.cpp
01_vis_test/: CMakeLists.txt  main.cpp
include/: icp.hpp
my_icp/: CMakeLists.txt  icp.cpp  icp.hpp  point.hpp
src/: CMakeLists.txt  icp.cpp  main.cpp
test/: CMakeLists.txt  icp_test.cpp  test_icp.cpp
